manifests/frontend-scada-v2-mobile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fermentation-monitor-scada-v2-mobile
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fermentation-monitor-scada-v2-mobile
  template:
    metadata:
      labels:
        app: fermentation-monitor-scada-v2-mobile
    spec:
      containers:
      - name: frontend
        image: ghcr.io/timbenedet/myfermentlab-frontend:scada-v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fermentation-monitor-scada-v2-mobile
  namespace: default
spec:
  selector:
    app: fermentation-monitor-scada-v2-mobile
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30085
  type: NodePort
