manifests/frontend-scada-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fermentation-monitor-scada-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fermentation-monitor-scada-v2
  template:
    metadata:
      labels:
        app: fermentation-monitor-scada-v2
    spec:
      containers:
      - name: frontend
        image: ghcr.io/timbenedet/myfermentlab-frontend:scada-v2-923d810
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fermentation-monitor-scada-v2
  namespace: default
spec:
  selector:
    app: fermentation-monitor-scada-v2
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30084
  type: NodePort
